Implement order item merging functionality; add OrderItemMerger utility class and update OrderServiceImpl to utilize it